# flexiconv

./: .gitignore  README.md  pyproject.toml
apps/: README.md
examples/alto/: 215_1_a.xml  sample.alto.xml
examples/brat/: simpleud.ann
examples/conllu/: awadhi-corpus-2.conll  noel_kop.conllu  novgorod-jaroslav.conllu
examples/docx/: 16453-1.docx  Modelo Convenio CUID VB Gabinete_6_marzo_2019.docx
examples/elan/: doreco_bain1259_DJI041109AC.eaf
examples/exmaralda/: A_Fazenda.exb
examples/flex/: sample.flextext
examples/folia/: sample.folia.xml
examples/hocr/: out.tei.xml  out2.hocr  output_page_1.hocr  output_page_1_from_hocr.tei.xml  roundtrip.hocr
examples/md/: FORMATS_AND_MAPPINGS.md
examples/srt/: 1C0408a.srt
examples/tbt/: sample.tbt
examples/tcf/: sample.tcf.xml
examples/tmx/: Trans_Atlantic.CZ.SE.tmx  vec.common-voice.tmx
examples/trs/: sample.trs
examples/webanno/: sample.tsv
flexiconv/: __init__.py  __main__.py  api.py  cli.py  mime.py  registry.py
flexiconv/core/: model.py
flexiconv/io/: __init__.py  alto.py  brat.py  chat.py  conllu.py  docx.py  doreco.py  eaf.py  epub.py  exb.py  flex.py  folia.py  (+21 more)
wiki/: Deduplication.md  Format-alto.md  Format-brat.md  Format-chat.md  Format-conllu.md  Format-docx.md  Format-doreco.md  Format-eaf.md  Format-epub.md  Format-exb.md  Format-flex.md  Format-folia.md  Format-hocr.md  Format-html.md  Format-latex.md  Format-md.md  Format-odt.md  Format-pagexml.md  Format-pdf.md  Format-rtf.md  Format-srt.md  Format-tbt.md  Format-tcf.md  Format-tei.md  Format-teitok.md  Format-textgrid.md  Format-tmx.md  Format-trs.md  Format-txt.md  Format-vert.md  Format-webanno.md  Formats.md  Home.md  Installation.md  QuickStart.md  README.md
